--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head>
 
 
-<title>Joe Bloggs - Curriculum Vitae</title><meta name="viewport" content="width=device-width">
+<title>Chris Carley - Curriculum Vitae</title><meta name="viewport" content="width=device-width">
 <meta name="description" content="The Curriculum Vitae of Joe Bloggs.">
 <meta charset="UTF-8"> 
 
