--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <title>Chris Carley - Curriculum Vitae</title><meta name="viewport" content="width=device-width">
-<meta name="description" content="The Curriculum Vitae of Joe Bloggs.">
+<meta name="description" content="The Curriculum Vitae of Chris Carley.">
 <meta charset="UTF-8"> 
 
 <link type="text/css" rel="stylesheet" href="style.css">
