--- a/index.html
+++ b/index.html
@@ -41,15 +41,10 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>Lorem
-ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus,
-interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus
-cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.
-Vestibulum bibendum mattis dignissim. Proin id sapien quis libero
-interdum porttitor.</p>
+					<p>Diligent Cybersecurity Specialist proficient in security research, planning, execution, and maintenance. Adept at training and educating all stakeholders on relevant Cybersecurity threats, risks, mitigation, and preventative measures. Enthusiastic about personal growth and improving security skills and knowledge. A dedicated team player known for going above and beyond and inspiring to drive change and continuous improvement.
+					</p>
 				</div>
-			
+			 
 			<div class="clear"></div>
 		
 		
@@ -101,15 +96,20 @@ interdum porttitor.</p>
 			
 			<div class="sectionContent">
 				<ul class="keySkills">
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-				</ul>
+					<li>Advanced - firewall, UTM, proxy, IDS/IPS, vulnerability-scanning, endpoint protection (antivirus), email protection (spam), policies and procedures, security awareness, encryption
+					</li>
+					<li>Proficient - SIEM, DLP, load balancer, monitoring, networking, servers, virtualization, OS, PKI, NAC, DPI, ATP, MDM, PAM/PIAM
+					</li>
+					<li>Familiar - Powershell, WAF, malware analysis, privilege/identity management
+					</li>
+					<li>Improving/Learning - Python, Cloud, pentesting, CASB, threat hunting
+					</li>
+					<li>Interested/Curious - forensic investigation, Blockchain, artificial intelligence
+					</li>
+					<li>Frameworks - ITIL, CoBIT, ISO/IEC 27001/02 series, NIST, PHIPA, att&ck</li>
+					<li>Technologies - McAfee, Cisco, Aruba/HPE, Barracuda, Solarwinds, WatchGuard, Sophos, Stealthbits, ManageEngine, Nessus, Qualys, CyberArk, etc.
+					</li>
+					</ul>
 			</div>
 			<div class="clear"></div>
 		
